fixed css from friend wrap

--- a/_assets/_css/main.css
+++ b/_assets/_css/main.css
@@ -220,6 +220,7 @@ body {
     -ms-flex-direction: row;	
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .user-name {
     font-weight: bold;
